@@ -1,3 +1,6 @@
+2005-08-20 01:05  Andrej Kacian <andrej@kacian.sk>
+	* src: clientops.c, silc-message.c: Support actions
+
 2005-08-14 14:33  Andrej Kacian <andrej@kacian.sk>
 	* src: clientops-notify.c, support.c, silc-gateway-connection.c:
 	       Make presence name lookup functions case-sensitive. Add "raw"
